# vbox-ubuntu2404-src

./: .gitignore  README
bash/: check-list.sh  nore.sh
bash/getopt/: getopt3.sh
c/: a.cc  a.py  c_usage  c_usage.c  clock_times  clock_times.c  cpp_usage  cpp_usage.cpp  dna.cpp  dna.h  dna.py  dna_test.c  my_math_lib.cpp  python_usage.py  time_t  time_t.cpp
cpp/: Makefile
cpp/dearImgui/: p1.cpp  p2.cpp
cpp/dearImgui/examples/e2/: CMakeLists.txt  main.cpp
cpp/fltk/: p2  p2.cpp  pump_control  pump_control.cpp
cpp/list/: Makefile  Makefile.fail  dog  dog.cpp  dog.h  gang  gang.cpp  ge  ge.cpp
cpp/parsing/: Makefile  a  a.cpp  b  b.cpp  c  c.cpp  c.exam  d  d.cpp  example.src  gstr  gstr.cpp  gstr.h  lexer  lexer.cpp  main  main.cpp  names  names.cpp  parse.c
cpp/psql/: db_conn  dbconn.cpp
cpp/tst/: audio_client  audio_client.cpp  audio_client2.cpp  audio_client3  audio_client3.cpp  datetime  datetime.cpp  datetime.d  f
cpp/wxWidgets/: README  (+2 more)
cpp/wxWidgets/0/: CMakeLists.txt  README
cpp/wxWidgets/0/src/: gl_canvas.cpp  gl_canvas.cpp.old  gl_canvas.h  main.cpp  stl_loader.cpp  stl_loader.h
java/: MultiThreadedTCPServer.java  README  TCPClient.java  TCPServer.java
lua/: README  s0.lua  s1.lua
python/: .m.py.swp  args.py  deco.py  gain.py  gtts1.py  gtts4.py  key2.py  key3.py  m.py  package-lock.json  package.json  pnore.py  pygame-mp3.py  pyside6.py  pytts.py
sql/: cpp_psql  cpp_psql.cpp  cpp_test  cpp_test.cpp  data.csv  insert.py  psql-db-input.sql  python-psql.py  test.py  test.sql  test1.sql
stm32/: Makefile  Makefile-lib  Makefile-m4
(+418 files in other folders)
